--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,24 @@
-.App {
-  text-align: center;
+.menuicon {
+  display: inline-block;
+  cursor: pointer;
 }
 
-.App-logo {
- /* animation: App-logo-spin infinite 20s linear;*/
-  height: 80px;
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
 }
 
-.App-title {
-  font-size: 1.5em;
-}
+.change .bar2 {opacity: 0;}
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
